fixed logo position on smallest screen

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -131,9 +131,9 @@ body {
     text-shadow: .5px .5px .5px $white;
   }
   #logo {
-    height: 60px;
+    height: 110px;
     left: 7vw;
-    top: -100px;
+    top: 75px;
     border-radius: 5px 25px;
   }
 }
